# uora-platform

./: .dockerignore  .env.example  .env.production.template  .gitignore  DEPLOYMENT.md  IICPC_REQUIREMENTS_VERIFICATION.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  stress_test.py  test_bot.py  test_integration.py
.claude/: launch.json
.github/workflows/: ci.yml
contestant-sdk/python/: mock_contestant.py  reference_server.py
contestant_sdk/: README.md
contestant_sdk/python/: reference_server.py
data/lobster/: sample_actions.json
deploy/: deploy.sh
docs/: architecture-blueprint.md  demo-script.md  manual-test-guide.md
docs/adr/: ADR-001-sandbox-isolation.md  ADR-005-security-model.md
docs/api/: openapi-3.0.yaml
docs/quant/: README.md  appendix-a-math-reference.md  appendix-b-resources.md  module-01-lob-mechanics.md  module-02-matching-engine.md  module-03-order-lifecycle.md  module-04-market-data.md  module-05-latency.md  module-06-the-math.md  module-09-scoring.md  (+3 more)
examples/: advanced_engine.py  dummy_bot.cpp  dummy_engine.py  dummy_matching_engine  dummy_matching_engine.cpp  test_engine_prod.py  test_orders.jsonl  working_engine.cpp
infra/: buildkitd.toml
scripts/: local_e2e.sh
submission-docs/: UORA-Voiceover-8min.txt  build_design_doc.py  build_intro_card.py  build_video_script.py  build_voiceover_8min.py
tests/: test_builder_extraction.py  test_hardened_features.py  test_production_pipeline_contract.py  test_scoring_composite.py  test_validator_l3l4_resources.py
uora-reports/: report-test-123.html
(+100 files in other folders)
