[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uora"
version = "1.0.0"
description = "Unified Orderbook Resilience Architecture — HFT Benchmarking Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "uvloop>=0.19.0",
    "aioboto3>=12.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "email-validator>=2.1.0",
    "bcrypt>=4.1.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "polars>=0.20.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "fpdf2>=2.7.0",
    "networkx>=3.2.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "weasyprint>=61.0",
    "kubernetes>=28.1.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "sortedcontainers>=2.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.setuptools.packages.find]
include = ["uora*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "uora"]
